used level.isClientSide() everywhere and List.of()